Streamlined JavaScript that removes header and button. Added JavaScript that adds a header and four buttons.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Javascript Quiz</title>
 </head>
 <body>
-    <h1>Javascript Quiz</h1>
-    <button id="start">Start!</button>
+    <div>
+        <h1>Javascript Quiz</h1>
+        <button id="start">Start!</button>
+    </div>
+    
     <script src="./script.js"></script>
 </body>
 </html>
