--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div>
         <h1>Javascript Quiz</h1>
-        <button id="start">Start!</button>
+        <button class="start">Start!</button>
     </div>
     
     <script src="./script.js"></script>
