Added the timer function to add a 60 second timer to the quiz.

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <title>Javascript Quiz</title>
 </head>
 <body>
-    <div>
+    <div class="quiz">
         <h1>Javascript Quiz</h1>
         <button class="start">Start!</button>
     </div>
+
+    <div class="timer"></div>
     
     <script src="./script.js"></script>
 </body>
